package eapli.base.domain.jobOpening;

public enum Mode {
    REMOTE,
    HYBRID,
    ONSITE
}
